[package]
name = "aleph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aleph-bft = "0.20.0"
clap = { version = "4.0", features = ["derive"]}
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.21", features = ["full"] }
