[package]
name = "async_analy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_trace"] }
pretty_env_logger = "0.4.0"
reqwest = "0.11"
tokio = { version = "1.18.2", features = [ "full" ] }
